# Crashwise

./: .gitlab-ci.example.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  NOTICE  PHASE1B_3_VALIDATION.md  PHASE1_2_VALIDATION.md  QUICKSTART_TEMPORAL.md  README.md  VALIDATION_CHECKLIST.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  setup.py
ai/: README.md  llm.txt  pyproject.toml
ai/agents/task_agent/: docker-compose.yml
ai/proxy/: README.md
ai/src/crashwise_ai/: __init__.py  __main__.py  a2a_server.py  a2a_wrapper.py  agent.py  agent_card.py  agent_executor.py  cli.py  cognee_integration.py  cognee_service.py  config.yaml  config_bridge.py  config_manager.py  ingest_utils.py  memory_service.py  remote_agent.py
backend/: README.md  mcp-config.json  pyproject.toml
backend/benchmarks/: README.md
backend/benchmarks/by_category/secret_detection/: bench_comparison.py  compare_tools.py
backend/benchmarks/by_category/secret_detection/results/: comparison_results.json
backend/src/: main.py
backend/src/api/: fuzzing.py  runs.py  system.py  workflows.py
backend/src/core/: setup.py
backend/src/models/: findings.py
backend/src/storage/: __init__.py  s3_cached.py
backend/src/temporal/: __init__.py  manager.py
backend/tests/: README.md  conftest.py
backend/toolbox/common/: storage_activities.py
backend/toolbox/modules/: base.py
backend/toolbox/modules/analyzer/: __init__.py  bandit_analyzer.py  llm_analyzer.py  mypy_analyzer.py  security_analyzer.py
backend/toolbox/modules/android/: __init__.py  jadx_decompiler.py  mobsf_scanner.py  opengrep_android.py
backend/toolbox/modules/fuzzer/: __init__.py  atheris_fuzzer.py  cargo_fuzzer.py
backend/toolbox/modules/reporter/: __init__.py  sarif_reporter.py
backend/toolbox/modules/scanner/: __init__.py  dependency_scanner.py  file_scanner.py
backend/toolbox/modules/secret_detection/: __init__.py  gitleaks.py  llm_secret_detector.py  trufflehog.py
backend/toolbox/workflows/: __init__.py
backend/toolbox/workflows/android_static_analysis/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/atheris_fuzzing/: metadata.yaml
backend/toolbox/workflows/cargo_fuzzing/: metadata.yaml
backend/toolbox/workflows/gitleaks_detection/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/llm_analysis/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/llm_secret_detection/: activities.py  metadata.yaml
backend/toolbox/workflows/ossfuzz_campaign/: metadata.yaml  workflow.py
backend/toolbox/workflows/python_sast/: __init__.py  activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/security_assessment/: activities.py  metadata.yaml  workflow.py
backend/toolbox/workflows/trufflehog_detection/: __init__.py  metadata.yaml
cli/: README.md  completion_install.py  main.py  pyproject.toml
cli/src/crashwise_cli/: __init__.py  api_validation.py  completion.py  config.py  constants.py  database.py  exceptions.py  fuzzy.py  ingest_utils.py  llm_resolver.py  main.py  policy.py  progress.py  secure_storage.py  validation.py  worker_manager.py
cli/src/crashwise_cli/commands/: __init__.py  ai.py  config.py  findings.py  ingest.py  init.py  monitor.py  oauth.py  status.py  triage.py  worker.py  workflow_exec.py  workflows.py
cli/src/fuzzforge_cli/: exceptions.py  llm_resolver.py  main.py  policy.py  secure_storage.py  worker_manager.py
cli/src/fuzzforge_cli/commands/: findings.py  init.py  monitor.py  oauth.py  triage.py  workflow_exec.py
cli/tests/: conftest.py  test_exceptions.py  test_llm_resolver.py  test_oauth.py  test_policy.py  test_secure_storage.py  test_triage_integration.py
docs/: README.md  docusaurus.config.ts  index.md  package.json  (+1 more)
sdk/: README.md  pyproject.toml
sdk/examples/: basic_workflow.py  batch_analysis.py  fuzzing_monitor.py  save_findings_demo.py  test_all_workflows.py
sdk/src/crashwise_sdk/: __init__.py  client.py  exceptions.py  models.py  testing.py  utils.py
(+71 files in other folders)
