[project]
name = "crashwise"
version = "0.7.3"
description = "Crashwise Platform - Complete fuzzing and security testing platform with AI capabilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "crashwise-sdk",
    "crashwise",
    "crashwise-cli",
]

[project.scripts]
cw = "crashwise_cli.main:main"
crashwise = "crashwise_cli.main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools]
packages = []

[tool.uv.sources]
crashwise-sdk = { path = "./sdk", editable = true }
crashwise = { path = "./ai", editable = true }
crashwise-cli = { path = "./cli", editable = true }
