[project]
name = "backend"
version = "0.7.3"
description = "Crashwise OSS backend"
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "temporalio>=1.6.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "docker>=7.0.0",
    "aiofiles>=23.0.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.12.15",
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "benchmarks"]
python_files = ["test_*.py", "bench_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: mark test as a benchmark",
]
