[project]
name = "crashwise-cli"
version = "0.7.3"
description = "Crashwise CLI - Command-line interface for Crashwise security testing platform"
readme = "README.md"
authors = [
    { name = "Yahya Toubali", email = "admin@yahyatoubali.me" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "sseclient-py>=1.8.0",
    "crashwise-sdk",
    "crashwise",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
]

[project.scripts]
cw = "crashwise_cli.main:main"
crashwise = "crashwise_cli.main:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
crashwise-sdk = { path = "../sdk", editable = true }
crashwise = { path = "../ai", editable = true }
