[project]
name = "crashwise-sdk"
version = "0.7.3"
description = "Python SDK for Crashwise security testing workflow orchestration platform"
readme = "README.md"
authors = [
    { name = "Yahya Toubali", email = "admin@yahyatoubali.me" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "websockets>=13.0",
    "sseclient-py>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
